fixes header alignment

--- a/main.css
+++ b/main.css
@@ -106,6 +106,7 @@ header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 165px;
+  align-items: center;
 }
 
 /** Call to Action Styles **/
